@@ -1,5 +1,10 @@
 2008-08-01  Dan Williams  <dcbw@redhat.com>
 
+	* src/utils/utils.c
+		- (fixup_desc_string): remove more bits of vendor and product strings
+
+2008-08-01  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (nma_menu_add_devices): count unavailable and unmanaged wireless
 			devices when building the menu, but not when determining whether
